# project-mycelium

./: .dockerignore  .gitignore  .scala-steward.conf  .scala-steward.conf.disabled  Earthfile  KEY-NAME.keystore  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  deps-review.yml  deps.yml  main.yml  pr.yml  scala-steward.yml
backend/: .scalafmt.conf  Earthfile  build.sbt  docker-compose.yml
backend/project/: plugins.sbt
backend/src/main/resources/: logback.xml
firmware/: Cargo.toml  Earthfile  README.md  onboarding.plantuml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: auth0.rs  ble.rs  ha.rs  kv.rs  main.rs  mycelium.rs  onboarding.rs  settings.rs  tokens.rs  wifi.rs
frontend/: Earthfile  capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/android/: capacitor.settings.gradle
frontend/android/app/: capacitor.build.gradle
frontend/public/.well-known/: assetlinks.json
frontend/src/: App.tsx  AuthContext.tsx  Retrieve.tsx  Shell.jsx  Shell.tsx  api.ts  main.tsx  schemas.ts
frontend/src/components/: AreaGraph.tsx  InputField.tsx  PlantCard.tsx  PlantLocation.tsx  PlantWateringSchedule.tsx  PrimaryButton.tsx  Select.tsx  TertiaryButton.tsx  TextArea.tsx
frontend/src/pages/: PlantAdd.tsx  PlantEdit.tsx  PlantList.tsx  PlantView.tsx  index.tsx
frontend/src/pages/about/: index.tsx
perenual-indexer/: Earthfile  build.sbt
perenual-indexer/project/: plugins.sbt
perenual-indexer/src/main/resources/: logback.xml
(+38 files in other folders)
