[package]
name = "mycelium-firmware"
version = "0.1.0"
authors = ["Fristi <mark@vectos.net>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-sys/native"]

std = ["esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc/std", "esp-idf-svc/std"]

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats

[dependencies]
log = { version = "0.4.17" }
esp-idf-sys = { version = "0.33.1", features = ["native"] }
esp-idf-svc = { version = "0.46.0" }
esp-idf-hal = { version = "0.41.2" }
embedded-svc = { version = "0.25.3"  }
bluedroid = { git = "https://github.com/Fristi/bluedroid.git", branch = "updated-dependencies" }
heapless = "0.7.16"
num_enum = "0.6.1"
serde = "1.0.164"
serde_json = "1.0.104"
thingbuf = { version = "0.1.4", features = ["static"] }
retry = "2.0.0"

[build-dependencies]
embuild = "0.31.2"
